Spotlamp with buffer shadow + object without "Cast buffer shadow" = artifact #34895

Closed
opened 2013-04-06 04:15:24 +02:00 by William Chargin · 4 comments

%%%--- Operating System, Graphics card ---
MacOSX 10.8.2 (12C60), 2.26 GHz Intel Core 2 Duo, 4 GB 1067 MHz DDR3 RAM, NVIDIA GeForce 9400 256 MB

- Blender version with error, and version that worked ---

2.66.0 r54697 has error

- Short description of error ---

A spot lamp with halo and buffer shadow combined with an object that doesn't have "Cast Buffer Shadow" (Material RNA: use_cast_buffer_shadows) has a plus-shaped artifact (possibly a triad) in the render view. Enlarging the value of the spotlight's "Halo Step" value (Lamp RNA: halo_step) enlarges the shadow. Setting spotlamp to "No Shadow" or "Ray Shadow" alleviates issue. Checking "Cast Buffer Shadow" alleviates issue.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open file, F12. You will see a crosshair on the letter "B".
Switch the object's material to "F WithBufferShadow." Press F12. The artifact is gone.
If you want, go to the lamp ("Spotlight") and increase the Step value to get a bigger crosshair.

Also attached: images with and w/o artifact.%%%

%%%--- Operating System, Graphics card --- MacOSX 10.8.2 (12C60), 2.26 GHz Intel Core 2 Duo, 4 GB 1067 MHz DDR3 RAM, NVIDIA GeForce 9400 256 MB - Blender version with error, and version that worked --- 2.66.0 r54697 has error - Short description of error --- A spot lamp with halo and buffer shadow combined with an object that doesn't have "Cast Buffer Shadow" (Material RNA: use_cast_buffer_shadows) has a plus-shaped artifact (possibly a triad) in the render view. Enlarging the value of the spotlight's "Halo Step" value (Lamp RNA: halo_step) enlarges the shadow. Setting spotlamp to "No Shadow" or "Ray Shadow" alleviates issue. Checking "Cast Buffer Shadow" alleviates issue. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open file, F12. You will see a crosshair on the letter "B". Switch the object's material to "F WithBufferShadow." Press F12. The artifact is gone. If you want, go to the lamp ("Spotlight") and increase the Step value to get a bigger crosshair. Also attached: images with and w/o artifact.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed - this is most likely a floating point precision error, the code tries to intersect the view vector with the lamp cone, and there it exactly looks into the cone tip...%%%

%%%Confirmed - this is most likely a floating point precision error, the code tries to intersect the view vector with the lamp cone, and there it exactly looks into the cone tip...%%%
Member

%%%The code that was sampling the shadowbuffer exited too soon (for ray going perpendicular to buffer it should take at least 1 sample).
Fix in svn. Code from 90ies, whoa ;) Thanks!%%%

%%%The code that was sampling the shadowbuffer exited too soon (for ray going perpendicular to buffer it should take at least 1 sample). Fix in svn. Code from 90ies, whoa ;) Thanks!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34895
No description provided.